# Stage_XLim

./: BaslerTofCam.cpp  Parameters.xml  README.md  basler_tof_node.cpp
Documents_fin_stage/: Cahier_de_bord.odt  Mémo_ros
Documents_fin_stage/Doc_GUI_Leenby/: Doc_code.odt
Documents_fin_stage/Doc_Joystick_Widget/: Doc_code.odt
Documents_fin_stage/Doc_Rviz_Widget/: Doc_rvizwidget.odt
Documents_fin_stage/Rapport/: Fiche_interview_vierge.odt  Rapport_stage.odt
Documents_fin_stage/Sync_2ToF_Cam/: Doc_Code.odt
Documents_fin_stage/deuxieme_package/: CMakeLists.txt  package.xml
Documents_fin_stage/deuxieme_package/src/: deuxieme_noeud.cpp
Documents_fin_stage/gui_leenby/: CMakeLists.txt  package.xml
Documents_fin_stage/gui_leenby/include/gui_leenby/: joystickwidget.hpp  lidarview.hpp  main_window.hpp  qnode.hpp  rvizwidget.hpp
Documents_fin_stage/gui_leenby/src/: joystickwidget.cpp  lidarview.cpp  main.cpp  main_window.cpp  qnode.cpp  rvizwidget.cpp
Documents_fin_stage/premier_package/: CMakeLists.txt  package.xml
Documents_fin_stage/premier_package/launch/: turtle_control.launch  turtle_feedback.launch
Documents_fin_stage/premier_package/src/: premier_noeud.cpp
Documents_fin_stage/rviz_widget/: CMakeLists.txt  package.xml
Documents_fin_stage/rviz_widget/include/rviz_widget/: rvizwidget.hpp
Documents_fin_stage/rviz_widget/src/: main.cpp  rvizwidget.cpp
Documents_fin_stage/vocal_synthesis_subscriber/: CMakeLists.txt  package.xml
Documents_fin_stage/vocal_synthesis_subscriber/src/: main.cpp
basler_tof/: Doc_Code.odt  basler_tof_node2.cpp
gui_leenby/: CMakeLists.txt
gui_leenby/include/gui_leenby/: corix_param.hpp  joystickwidget.hpp  lidarview.hpp  main_window.hpp  qnode.hpp
gui_leenby/launch/: Gui_cam_lidar.launch
gui_leenby/resources/: images.qrc
gui_leenby/src/: joystickwidget.cpp  lidarview.cpp  main.cpp  main_window.cpp  qnode.cpp
