<?xml version="1.0"?>
<package format="2">
  <name>rviz_widget</name>
  <version>0.0.0</version>
  <description>The rviz_widget package</description>

  <maintainer email="mix@todo.todo">mix</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>

  </export>
</package>
